// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// (-- api-linter: all=disabled
//     aip.dev/not-precedent: This file needs to be updated to comply with AIPs.
//     --)
//  TODO(world-federation-of-advertisers/cross-media-measurement#2777): Update
//  to comply AIPs. Also rename `BlobDetails` to avoid the `Details`, which
//  indicating the internal message by AIP.

syntax = "proto3";

package wfa.measurement.securecomputation.impressions;

import "google/api/field_behavior.proto";
import "wfa/measurement/edpaggregator/v1alpha/encrypted_dek.proto";

option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "BlobDetailsProto";

// Message representing the info needed to retrieve a decrypted blob from
// storage
message BlobDetails {
  // The blob URI for encrypted data
  string blob_uri = 1 [(google.api.field_behavior) = REQUIRED];

  // The encrypted dek used with KMS to decrypt data
  EncryptedDek encrypted_dek = 2 [(google.api.field_behavior) = REQUIRED];
}
